--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/joseph-onsip/PhoneRTCMediaHandler",
   "dependencies": {
-    "newer": "^0.1.5"
+    "newer": "^0.1.5",
+    "sip.js": "^0.6.0"
   }
 }
