package.json: change name to 'phonertcmediahandler'
lowercase names are required by `npm publish`

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "PhoneRTCMediaHandler",
+  "name": "phonertcmediahandler",
   "version": "0.1.0",
   "description": "PhoneRTCMediaHandler ====================",
   "main": "index.js",
