--- a/package.json
+++ b/package.json
@@ -17,7 +17,6 @@
   },
   "homepage": "https://github.com/joseph-onsip/PhoneRTCMediaHandler",
   "dependencies": {
-    "newer": "^0.1.5",
-    "sip.js": "^0.6.0"
+    "newer": "^0.1.5"
   }
 }
