--- a/package.json
+++ b/package.json
@@ -16,7 +16,5 @@
     "url": "https://github.com/joseph-onsip/PhoneRTCMediaHandler/issues"
   },
   "homepage": "https://github.com/joseph-onsip/PhoneRTCMediaHandler",
-  "dependencies": {
-    "newer": "^0.1.5"
-  }
+  "dependencies": {}
 }
